--- a/Slider/index.html
+++ b/Slider/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <title>Card slider</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="slide_1">
+        <div class="slide"
+            style="background-image: url(https://images.unsplash.com/photo-1568750616747-9258254cc3b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1229&q=80)">
             <h3 class="slide_title">Mustang</h3>
         </div>
-        <div class="slide_2">
+        <div class="slide"
+            style="background-image: url(https://images.unsplash.com/photo-1607603750909-408e193868c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)">
             <h3 class="slide_title">Toyota</h3>
         </div>
-        <div class="slide_3">
+        <div class="slide"
+            style="background-image: url(https://images.unsplash.com/photo-1615394695852-da39a8df9bf1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)">
             <h3 class="slide_title">McLaren</h3>
         </div>
-        <div class="slide_4">
+        <div class="slide active"
+            style="background-image: url(https://images.unsplash.com/photo-1629574180667-0753d6512a1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80)">
+            <h3 class="slide_title active">Nissan</h3>
+        </div>
+        <div class="slide"
+            style="background-image: url(https://images.unsplash.com/photo-1593063659199-f1f924fef0cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80)">
             <h3 class="slide_title">BMW</h3>
         </div>
-        <div class="slide_5">
-            <h3 class="slide_title">Nissan  </h3>
-        </div>
     </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
